--- a/index.html
+++ b/index.html
@@ -1,114 +1,276 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        table,th,td
-        {
-            border: 1px solid black;
-            border-collapse: collapse;
-        }
-        table{
-            width: 100%;
-        }
+      @import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
+      @import url("https://fonts.googleapis.com/css2?family=Inter&family=Montserrat&display=swap");
+
+      * {
+        margin: 0px;
+      }
+
+      nav {
+        height: 57px;
+        background-color: black;
+        color: white;
+        font-size: 24px;
+        padding-top: 25px;
+        padding-left: 15px;
+        font-family: Inter;
+      }
+
+      main {
+        padding-inline: 30px;
+      }
+
+      #section-1 {
+        padding-top: 30px;
+        padding-bottom: 35px;
+      }
+
+      #section,
+      p {
+        color: #000;
+        font-family: Inter;
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 300;
+        line-height: normal;
+      }
+
+      #section-2 {
+        padding-top: 30px;
+        padding-bottom: 35px;
+      }
+
+      #ordered-list {
+        padding-top: 30px;
+        padding-bottom: 35px;
+      }
+
+      #unordered-list {
+        padding-top: 30px;
+        padding-bottom: 35px;
+      }
+
+      #table {
+        padding-top: 30px;
+        padding-bottom: 35px;
+      }
+
+      #learn-more {
+        width: 226px;
+        height: 58px;
+        background-color: #000;
+        color: white;
+        font-family: Inter;
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 300;
+        line-height: normal;
+        border: none;
+      }
+
+      h1 {
+        color: black;
+        font-family: Inter;
+        font-size: 64px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+      }
+
+      .o-list {
+        color: #000;
+        font-family: Inter;
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 300;
+        line-height: normal;
+      }
+
+      table {
+        border: 1px solid black;
+        border-collapse: collapse;
+      }
+
+      tr {
+        border-collapse: collapse;
+        height: 70px;
+      }
+
+      td,
+      th {
+        padding: 10px;
+        border-left: 1px solid black;
+        border-right: 1px solid black;
+        color: black;
+        font-family: Montserrat;
+        font-size: 28px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        text-align: center;
+      }
+
+      thead {
+        border-bottom: 1px solid black;
+      }
+
+      tfoot {
+        background-color: black;
+        color: white;
+      }
+
+      tfoot > tr > td {
+        color: white;
+      }
+
+      .col-1 {
+        width: 200px;
+      }
+
+      .co1-2 {
+        width: 300px;
+      }
+
+      .col-3 {
+        width: 700px;
+      }
     </style>
-</head>
-<body>
-    <header>
-        <nav style="background-color: black; color: white;" width="100%">
-            <p>CompanyName.</p>
-        </nav>
-    </header>
-    
-    <section>
+  </head>
+  <body>
+    <nav>CompanyName.</nav>
+
+    <main>
+      <section id="section-1">
         <h1>Heading 1</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <a href="https://www.lipsum.com/"><button style="text-align: center;background-color: black; color: white;">Learn More</button></a>
-    </section>
+        <br />
+        <br />
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum
+          dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+          incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+          commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+          velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+          occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+          mollit anim id est laborum.
+        </p>
+        <br />
+        <br />
+        <br>
+        <a href="https://www.lipsum.com/"
+          ><button id="learn-more">Learn More</button>
+        </a>
+      </section>
 
-    <section>
+      <section id="section-2">
         <h1>Heading 2</h1>
-        <img src="https://images.unsplash.com/photo-1472437774355-71ab6752b434?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8aHRtbCUyRmNzc3xlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=600&q=60" alt="books of html">
-    </section>
+        <br />
+        <br />
+        <br />
+        <img
+          src="https://images.unsplash.com/photo-1472437774355-71ab6752b434?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8aHRtbCUyRmNzc3xlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=600&q=60"
+          alt="books of html"
+          width="729px"
+          height="911px"
+        />
+      </section>
 
-    <section>
+      <section id="ordered-list">
         <h1>Ordered List</h1>
-        <ol>
-            <li>Lorem ipsum dolor sit amet,</li>
-            <li>consectetur adipiscing elit,</li>
-            <li>sed do eiusmod tempor incididunt</li>
-            <li>ut labore et dolore magna aliqua.</li>
-            <li>Ut enim ad minim veniam,</li>
+        <br />
+        <br />
+        <ol class="o-list">
+          <li>Lorem ipsum dolor sit amet,</li>
+          <li>consectetur adipiscing elit,</li>
+          <li>sed do eiusmod tempor incididunt</li>
+          <li>ut labore et dolore magna aliqua.</li>
+          <li>Ut enim ad minim veniam,</li>
         </ol>
-    </section>
+      </section>
 
-    <section>
+      <section id="unordered-list">
         <h1>Unordered List</h1>
-        <ul>
-            <li>Lorem ipsum dolor sit amet,</li>
-            <li>consectetur adipiscing elit,</li>
-            <li>sed do eiusmod tempor incididunt</li>
-            <li>ut labore et dolore magna aliqua.</li>
-            <li>Ut enim ad minim veniam,</li>
+        <br />
+        <br />
+        <ul class="o-list">
+          <li>Lorem ipsum dolor sit amet,</li>
+          <li>consectetur adipiscing elit,</li>
+          <li>sed do eiusmod tempor incididunt</li>
+          <li>ut labore et dolore magna aliqua.</li>
+          <li>Ut enim ad minim veniam,</li>
         </ul>
-    </section>
+      </section>
 
-    <section>
-        <table>
-            <thead>
-                <th>SNO.</th>
-                <th>Startup Name</th>
-                <th>Startup Discription</th>
-            </thead>
+      <section id="table">
+        <h1>Table</h1>
+        <br />
+        <br />
+        <table id="table1">
+          <thead>
+            <th class="header-cells col-1">SNO.</th>
+            <th class="header-cells col-2">Startup Name</th>
+            <th class="header-cells col-3">Startup Discription</th>
+          </thead>
 
-            <tbody>
-                <tr>
-                    <td>1.</td>
-                    <td>WowIndia</td>
-                    <td>A startup with Wow Ideas.</td>
-                </tr>
+          <tbody>
+            <tr>
+              <td>1.</td>
+              <td>WowIndia</td>
+              <td>A startup with Wow Ideas.</td>
+            </tr>
 
-                <tr>
-                    <td>2.</td>
-                    <td>Lorem Ipsum</td>
-                    <td>Lorem Ipsum Text</td>
-                </tr>
+            <tr>
+              <td>2.</td>
+              <td>Lorem Ipsum</td>
+              <td>Lorem Ipsum Text</td>
+            </tr>
 
-                <tr>
-                    <td>3.</td>
-                    <td>Lorem Ipsum</td>
-                    <td>Lorem Ipsum Text</td>
-                </tr>
+            <tr>
+              <td>3.</td>
+              <td>Lorem Ipsum</td>
+              <td>Lorem Ipsum Text</td>
+            </tr>
 
-                <tr>
-                    <td>4.</td>
-                    <td>Lorem Ipsum</td>
-                    <td>Lorem Ipsum Text</td>
-                </tr>
+            <tr>
+              <td>4.</td>
+              <td>Lorem Ipsum</td>
+              <td>Lorem Ipsum Text</td>
+            </tr>
 
-                <tr>
-                    <td>5.</td>
-                    <td>Lorem Ipsum</td>
-                    <td>Lorem Ipsum Text</td>
-                </tr>
+            <tr>
+              <td>5.</td>
+              <td>Lorem Ipsum</td>
+              <td>Lorem Ipsum Text</td>
+            </tr>
 
-                <tr>
-                    <td>6.</td>
-                    <td>Lorem Ipsum</td>
-                    <td>Lorem Ipsum Text</td>
-                </tr>
-            </tbody>
+            <tr>
+              <td>6.</td>
+              <td>Lorem Ipsum</td>
+              <td>Lorem Ipsum Text</td>
+            </tr>
+          </tbody>
 
-            <tfoot style="background-color: black; color: white;">
-                <tr>
-                    <td>7.</td>
-                    <td>Final Footer</td>
-                    <td>Lorem Ipsum Text</td>
-                </tr>
-            </tfoot>
+          <tfoot>
+            <tr>
+              <td class="footer-cells">7.</td>
+              <td class="footer-cells">Final Footer</td>
+              <td class="footer-cells">Lorem Ipsum Text</td>
+            </tr>
+          </tfoot>
         </table>
-    </section>
-</body>
+      </section>
+    </main>
+  </body>
 </html>
